--- a/BusinessLayer/BusinessLayer.csproj
+++ b/BusinessLayer/BusinessLayer.csproj
@@ -83,6 +83,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ValidationRules-FluentValidation\CategoryValidator.cs" />
     <Compile Include="ValidationRules-FluentValidation\ContactValidator.cs" />
+    <Compile Include="ValidationRules-FluentValidation\ContentValidator.cs" />
+    <Compile Include="ValidationRules-FluentValidation\HeadingValidator.cs" />
     <Compile Include="ValidationRules-FluentValidation\MessageValidator.cs" />
     <Compile Include="ValidationRules-FluentValidation\WriterValidator.cs" />
   </ItemGroup>
