--- a/SizceHaber/SizceHaber.csproj
+++ b/SizceHaber/SizceHaber.csproj
@@ -2171,6 +2171,26 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="images\404page.png" />
+    <Content Include="images\admincontent.png" />
+    <Content Include="images\admincontent2.png" />
+    <Content Include="images\adminpanel.png" />
+    <Content Include="images\adminpanelcontent.png" />
+    <Content Include="images\categories.png" />
+    <Content Include="images\contents.png" />
+    <Content Include="images\contents2.png" />
+    <Content Include="images\headings.png" />
+    <Content Include="images\login.png" />
+    <Content Include="images\register.png" />
+    <Content Include="images\report.png" />
+    <Content Include="images\users.png" />
+    <Content Include="images\writercontents.png" />
+    <Content Include="images\writerheadings.png" />
+    <Content Include="images\writermessage.png" />
+    <Content Include="images\writerpanelcontent.png" />
+    <Content Include="images\writerpanelheading.png" />
+    <Content Include="images\writerprofile.png" />
+    <Content Include="images\yetki.png" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="AdminLTE-3.0.4\.babelrc" />
